Add Hunspell Support